@@ -46,12 +46,11 @@ public class SeparatedPair {
     public SeparatedPair(final String s) throws IllegalConfigException {
         final String[] t = s.split(" ", 2);
         if (t.length < 2) {
-            throw new IllegalConfigException(String.format("Invalid separate pair: \"%s\"", s));
+            throw new IllegalConfigException("Invalid separate pair: \"%s\"".formatted(s));
         }
         if (Arrays.asList(t).contains(SeatTable.EMPTY_SEAT_PLACEHOLDER)) {
-            throw new IllegalConfigException(String.format(
-                    "Separated name list must not contain empty seat place holder \"%s\"",
-                    SeatTable.EMPTY_SEAT_PLACEHOLDER));
+            throw new IllegalConfigException(
+                    "Separated name list must not contain empty seat place holder \"%s\"".formatted(SeatTable.EMPTY_SEAT_PLACEHOLDER));
         }
         if (Objects.equals(t[0], t[1])) {
             throw new IllegalConfigException("Two names in one separate pair cannot be the same");
